<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
<!-- taken from: http://www.cs.dartmouth.edu/~campbell/cs65/lecture12/lecture12.html -->

    <PreferenceCategory
        android:title="@string/preferences_server">

        <EditTextPreference
            android:key="puboardsteward_json_feed_id"
            android:title="@string/preference_scriptid_title"
            android:summary="@string/preference_scriptid_summary"
            android:dialogTitle="@string/preference_scriptid_title_dialog"
            android:defaultValue="AKfycbyjK_64mlM8FNCigJxELfXTxBMTP8vF3x1NZtAMHywDD1XanIE"/>

        <EditTextPreference
            android:key="puboardsteward_sender_id"
            android:title="@string/preference_senderid_title"
            android:summary="@string/preference_senderid_summary"
            android:dialogTitle="@string/preference_senderid_title_dialog"
            android:inputType="number"
            android:defaultValue="296464857836" />
        <EditTextPreference
            android:key="puboardsteward_spreadsheet_id"
            android:title="@string/preference_spreadsheetid_title"
            android:summary="@string/preference_spreadsheetid_summary"
            android:dialogTitle="@string/preference_spreadsheetid_title_dialog"
            android:defaultValue="1oDk4feeuAxGG4myHOxrhI7YVCJZPiqG0zNSqWYQNrZA" />

    </PreferenceCategory>

</PreferenceScreen>